--- a/main.html
+++ b/main.html
@@ -27,33 +27,33 @@
 
     <!-- Wrapper for slides -->
     <div class="carousel-inner">
-      <div class="item active first.slide">
-        <img src="https://www.w3schools.com/bootstrap/chicago.jpg" alt="Los Angeles" style="width:100%;">
+      <div class="item active first-slide">
+        <img src="la.jpg" alt="Los Angeles" style="width:100%;">
       </div>
 
-      <div class="item second.slide">
-        <img src="https://www.w3schools.com/bootstrap/ny.jpg" alt="Chicago" style="width:100%;">
+      <div class="item second-slide">
+        <img src="chicago.jpg" alt="Chicago" style="width:100%;">
       </div>
     
-      <div class="item third.slide">
-        <img src="https://www.w3schools.com/bootstrap/la.jpg" alt="New york" style="width:100%;">
-      </div>
-
-	 <div class="item fourth.slide">
+      <div class="item third-slide">
         <img src="ny.jpg" alt="New york" style="width:100%;">
       </div>
 
-	 <div class="item fifth.slide">
+	 <div class="item fourth-slide">
+        <img src="ny.jpg" alt="New york" style="width:100%;">
+      </div>
+
+	 <div class="item fifth-slide">
         <img src="ny.jpg" alt="New york" style="width:100%;">
      </div>
     </div>
 
     <!-- Left and right controls -->
-    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+    <a class="left carousel-control left" href="#myCarousel" data-slide="prev">
       <span class="glyphicon glyphicon-chevron-left"></span>
       <span class="sr-only">Previous</span>
     </a>
-    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+    <a class="right carousel-control right" href="#myCarousel" data-slide="next">
       <span class="glyphicon glyphicon-chevron-right"></span>
       <span class="sr-only">Next</span>
     </a>
