--- a/main.html
+++ b/main.html
@@ -27,7 +27,7 @@
 
     <!-- Wrapper for slides -->
     <div class="carousel-inner">
-      <div class="item active first-slide">
+      <div class="item first-slide">
         <img src="la.jpg" alt="Los Angeles" style="width:100%;">
       </div>
 
@@ -35,7 +35,7 @@
         <img src="chicago.jpg" alt="Chicago" style="width:100%;">
       </div>
     
-      <div class="item third-slide">
+      <div class="item active third-slide">
         <img src="ny.jpg" alt="New york" style="width:100%;">
       </div>
 
